apps/base/infra-blocky/deploy/blocky/service-dns-tcp.yaml
apiVersion: v1
kind: Service
metadata:
  name: blocky-dns-tcp
  annotations:
    metallb.universe.tf/allow-shared-ip: blocky
spec:
  type: LoadBalancer
  loadBalancerIP: 1.2.3.4
  externalTrafficPolicy: Local
  ports:
    - name: dns
      port: 53
      targetPort: dns
      protocol: TCP
  selector:
    app.kubernetes.io/name: blocky
    app.kubernetes.io/component: blocky
