apps/base/infra-blocky/deploy/blocky/service-dns-udp.yaml
apiVersion: v1
kind: Service
metadata:
  name: blocky-dns-udp
  annotations:
    metallb.universe.tf/allow-shared-ip: blocky
spec:
  type: LoadBalancer
  loadBalancerIP: 1.2.3.4
  externalTrafficPolicy: Local
  ports:
    - name: dns-udp
      port: 53
      targetPort: dns-udp
      protocol: UDP
  selector:
    app.kubernetes.io/name: blocky
    app.kubernetes.io/component: blocky
